<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:icon="@drawable/ic_home_24dp"
            android:title="@string/home"/>
    </group>

    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_find_books"
            android:icon="@drawable/ic_nav_item_24dp"
            android:title="@string/find_books"/>
        <item
            android:id="@+id/nav_author_info"
            android:icon="@drawable/ic_nav_item_24dp"
            android:title="@string/author_info"/>
        <item
            android:id="@+id/nav_recent_reviews"
            android:icon="@drawable/ic_nav_item_24dp"
            android:title="@string/recent_reviews"/>
    </group>
</menu>