<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/details_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="4dp"/>

            </FrameLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/details_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/details_margin"
                    android:textStyle="bold"
                    tools:text="Book Title"/>

                <TextView
                    android:id="@+id/details_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/details_margin"
                    tools:text="Book Author"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/review_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/review_details_title"/>

        <TextView
            android:id="@+id/review_details_display_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/details_margin"/>

        <TextView
            android:id="@+id/review_details_rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/details_margin"/>

        <TextView
            android:id="@+id/review_details_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/details_margin"/>

        <TextView
            android:id="@+id/book_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/details_margin"
            android:textStyle="bold"
            android:text="@string/book_details_title"/>

        <TextView
            android:id="@+id/book_details_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/details_margin"/>

        <TextView
            android:id="@+id/book_details_num_pages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/details_margin"/>

        <TextView
            android:id="@+id/book_details_format"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/details_margin"/>

        <TextView
            android:id="@+id/book_details_publisher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/details_margin"/>

        <TextView
            android:id="@+id/book_details_publication_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/details_margin"/>

        <TextView
            android:id="@+id/book_details_average_rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/details_margin"/>

        <TextView
            android:id="@+id/book_details_ratings_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/details_margin"/>

        <TextView
            android:id="@+id/author_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/details_margin"
            android:textStyle="bold"
            android:text="@string/author_details_title"/>

        <TextView
            android:id="@+id/author_details_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/details_margin"/>

        <TextView
            android:id="@+id/author_details_average_rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/details_margin"/>

        <TextView
            android:id="@+id/author_details_ratings_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/details_margin"/>

        <TextView
            android:id="@+id/review_details_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/details_margin"/>

        <include layout="@layout/footer"/>

    </LinearLayout>
</ScrollView>